name:                elemo
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/yigitozkavci/elemo
license:             BSD3
license-file:        LICENSE
author:              Yiğit Özkavcı
maintainer:          yigitozkavci8@gmail.com
copyright:           2017 Yiğit Özkavcı
category:            Game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable Main
  default-language:    Haskell2010
  main-is:             Main.hs
  hs-source-dirs:      src
  build-depends:
    base,
    containers,
    gloss,
    heaps,
    lens,
    monad-logger,
    mtl,
    random,
    safe,
    sequence,
    text,
    zippers
